Weather util: get first rainy day